--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -9,6 +9,8 @@
 
 
 
+
+  
   
   
   
@@ -26,6 +28,8 @@
 
 
 
+
+  
   
   
   
@@ -43,6 +47,8 @@
 
 
 
+
+  
   
   
   
@@ -60,6 +66,8 @@
 
 
 
+
+  
   
   
   
@@ -77,6 +85,8 @@
 
 
 
+
+  
   
   
   
@@ -94,6 +104,8 @@
 
 
 
+
+  
   
   
   
@@ -111,6 +123,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -141,6 +156,7 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
@@ -150,7 +166,9 @@
 
 
 
+
 <br>
+
 
 
 
@@ -169,7 +187,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -187,8 +207,10 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 
@@ -204,17 +226,23 @@ papers:</i></p>
 
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
-<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&ldquo;Regulating Trade Margins and Consumer Welfare: Evidence from Cardiac Products in India&rdquo; with Debi Prasad Mohapatra<br>
-
-
-
-
-
-
 
 <br>
+&nbsp;&nbsp;&nbsp; &nbsp;&ldquo;Regulating Trade Margins and Consumer
+Welfare: Evidence from Cardiac Products in India&rdquo; with Debi
+Prasad Mohapatra<br>
+
+
+
+
+
+
+
+
+<br>
+
 
 
 
@@ -227,7 +255,8 @@ papers:</i></p>
 Taxes and
 Advertising Restrictions in a Dynamic Equilibrium</a>"&nbsp;with
 Rossi
-Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
+Abi-Rafeh, Rachel Griffith, Martin O'Connell, accepted at <span style="font-weight: bold; font-style: italic;">American Economic Journal, Microeconomics</span><br>
+
 
 
 
@@ -238,6 +267,7 @@ Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
 
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -257,7 +287,9 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
+
 
 
 
@@ -278,6 +310,7 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 <p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
 
@@ -287,7 +320,9 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -310,7 +345,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -334,7 +371,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -354,8 +393,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -378,7 +419,9 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 
 
 
+
 <br>
+
 
 
 
@@ -403,7 +446,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -424,7 +469,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -445,8 +492,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -466,6 +515,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
@@ -475,7 +525,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -494,6 +546,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
@@ -503,7 +556,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -522,7 +577,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -547,7 +604,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -570,7 +629,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -593,7 +654,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -617,7 +680,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -635,6 +700,7 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
@@ -644,7 +710,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -668,7 +736,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -687,7 +757,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -706,7 +778,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -727,7 +801,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -749,7 +825,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -769,7 +847,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -788,7 +868,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
