--- a/links.htm
+++ b/links.htm
@@ -6,6 +6,8 @@
 
 
 
+
+  
   
   
   
@@ -17,6 +19,8 @@
 
 
 
+
+  
   
   
   
@@ -28,6 +32,8 @@
 
 
 
+
+  
   
   
   
@@ -39,6 +45,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -60,6 +69,7 @@
 
 
 
+
 <span style="font-weight: bold; font-family: Calibri;"></span>
 <p><img alt="" style="width: 227px; height: 341px;" src="Pierre%20Dubois%20-%20021%20reduced.jpg"></p>
 
@@ -67,7 +77,9 @@
 
 
 
+
 <div style="font-family: Calibri;"><br>
+
 
 
 
@@ -80,8 +92,10 @@
 
 
 
+
 <div style="font-family: Calibri;"><a href="contact.htm" target="principal2">
 </a><a href="Publications.htm" target="principal2">Publications</a></div>
+
 
 
 
@@ -94,8 +108,10 @@ Papers</a><br style="font-family: Calibri;">
 
 
 
+
 <a style="font-family: Calibri;" href="other.htm#Forthcoming" target="principal2">Forthcoming
 seminars</a><br style="font-family: Calibri;">
+
 
 
 
@@ -108,8 +124,10 @@ Service</a><br>
 
 
 
+
 <a href="other.htm#Organization" target="principal2">Conferences
 organized</a><br>
+
 
 
 
@@ -122,13 +140,16 @@ Students</a></div>
 
 
 
-<br style="font-family: Calibri;">
-
-
-
-
 
 <br style="font-family: Calibri;">
+
+
+
+
+
+
+<br style="font-family: Calibri;">
+
 
 
 
@@ -141,7 +162,9 @@ CV</a><br>
 
 
 
+
 &nbsp;<a href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank">TSE web page<br>
+
 
 
 
@@ -153,7 +176,10 @@ CV</a><br>
 
 
 
-&nbsp;<a href="https://cepr.org/about/people/pierre-dubois" target="_blank">CEPR&nbsp;page</a></font><br style="font-family: Calibri;">
+
+&nbsp;<a href="https://cepr.org/about/people/pierre-dubois" target="_blank">CEPR&nbsp;page</a><br>
+&nbsp;<a href="https://www.tse-fr.eu/health" target="_blank">TSE Health Center</a><br style="font-family: Calibri;">
+</font>
 
 
 
@@ -165,7 +191,9 @@ CV</a><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -177,7 +205,9 @@ CV</a><br>
 
 
 
+
 </ul>
+
 
 
 
