--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -10,6 +10,8 @@
 
 
 
+
+  
   
   
   
@@ -29,6 +31,8 @@
 
 
 
+
+  
   
   
   
@@ -48,6 +52,8 @@
 
 
 
+
+  
   
   
   
@@ -67,6 +73,8 @@
 
 
 
+
+  
   
   
   
@@ -86,6 +94,8 @@
 
 
 
+
+  
   
   
   
@@ -105,6 +115,8 @@
 
 
 
+
+  
   
   
   
@@ -124,6 +136,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -157,6 +172,7 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
@@ -167,7 +183,9 @@
 
 
 
+
 <br>
+
 
 
 
@@ -188,7 +206,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -208,8 +228,10 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 
@@ -227,21 +249,20 @@ papers:</i></p>
 
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
 
+
 <br>
-&nbsp;&nbsp;&nbsp; &nbsp;&ldquo;Regulating Trade Margins and Consumer
+</span></span><span style="font-family: Calibri;"><span lang="EN-US">
+&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;Regulating Trade Margins and Consumer
 Welfare: Evidence from Cardiac Products in India&rdquo; with Debi
 Prasad Mohapatra<br>
-
-
-
-
-
-
-
-
 <br>
+</span></span><span style="font-family: Calibri;"><span lang="EN-US">
+&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;Pharmaceutical Regulation and Incentives for Innovation in an International Perspective&rdquo;</span></span><br>
+<span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -265,8 +286,10 @@ Abi-Rafeh, Rachel Griffith, Martin O'Connell, accepted at <span style="font-weig
 
 
 
+
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -288,7 +311,9 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
+
 
 
 
@@ -311,6 +336,7 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 <p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
 
@@ -321,7 +347,9 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -346,7 +374,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -372,7 +402,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -394,8 +426,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -420,7 +454,9 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 
 
 
+
 <br>
+
 
 
 
@@ -447,7 +483,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -470,7 +508,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -493,8 +533,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -516,6 +558,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
@@ -526,7 +569,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -547,6 +592,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
@@ -557,7 +603,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -578,7 +626,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -605,7 +655,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -630,7 +682,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -655,7 +709,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -681,7 +737,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -701,6 +759,7 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
@@ -711,7 +770,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -737,7 +798,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -758,7 +821,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -779,7 +844,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -802,7 +869,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -826,7 +895,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -848,7 +919,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -869,7 +942,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
