--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -11,6 +11,8 @@
 
 
 
+
+  
   
   
   
@@ -32,6 +34,8 @@
 
 
 
+
+  
   
   
   
@@ -53,6 +57,8 @@
 
 
 
+
+  
   
   
   
@@ -74,6 +80,8 @@
 
 
 
+
+  
   
   
   
@@ -95,6 +103,8 @@
 
 
 
+
+  
   
   
   
@@ -116,6 +126,8 @@
 
 
 
+
+  
   
   
   
@@ -137,6 +149,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -173,6 +188,7 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
@@ -184,7 +200,9 @@
 
 
 
+
 <br>
+
 
 
 
@@ -207,7 +225,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -229,8 +249,10 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 
@@ -250,33 +272,23 @@ papers:</i></p>
 
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
 
 
+
 <br>
+
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">
 &nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;Regulating Trade Margins and Consumer
 Welfare: Evidence from Cardiac Products in India&rdquo; with Debi
 Prasad Mohapatra<br>
+
 <br>
-</span></span><span style="font-family: Calibri;"><span lang="EN-US">
-&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;Pharmaceutical Regulation and Incentives for Innovation in an International Perspective&rdquo;</span></span><br>
-<span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
-
-
-
-
-
-
-
-
 
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">
-&nbsp;&nbsp;&nbsp;&nbsp; "<a href="ADGO.pdf" target="_blank">The Effects of Sin
-Taxes and
-Advertising Restrictions in a Dynamic Equilibrium</a>"&nbsp;with
-Rossi
-Abi-Rafeh, Rachel Griffith, Martin O'Connell, accepted at <span style="font-weight: bold; font-style: italic;">American Economic Journal, Microeconomics</span><br>
+&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;Pharmaceutical Regulation and Incentives for Innovation in an International Perspective&rdquo;</span></span><span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold; font-style: italic;"></span><br>
+
 
 
 
@@ -289,6 +301,7 @@ Abi-Rafeh, Rachel Griffith, Martin O'Connell, accepted at <span style="font-weig
 
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -312,6 +325,7 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
 
 
@@ -323,10 +337,12 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 </span></span>
-<p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style="">1.</span></span><span style="font-family: Calibri;"> &nbsp; </span><span style="font-family: Calibri;">&nbsp; &nbsp;&nbsp; &nbsp; </span><span style="font-family: Calibri;"><span lang="EN-US">"<a href="DMT%20cooperatives%202023%2006_website.pdf" target="_blank">The
+<p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style="">1.</span></span><span style="font-family: Calibri;"> &nbsp; </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; </span><span style="font-family: Calibri;"><span lang="EN-US">"<a href="DMT%20cooperatives%202023%2006_website.pdf" target="_blank">The
 (Ir)Relevance of the Cooperative Form</a>"
 with Paul-Henri Moisson and Jean Tirole</span></span></p>
+
 
 
 
@@ -348,7 +364,9 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -375,7 +393,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -403,7 +423,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -427,8 +449,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -455,7 +479,9 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 
 
 
+
 <br>
+
 
 
 
@@ -484,7 +510,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -509,7 +537,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -534,8 +564,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -559,6 +591,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
@@ -570,7 +603,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -593,6 +628,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
@@ -604,7 +640,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -627,7 +665,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -656,7 +696,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -683,7 +725,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -710,7 +754,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -738,7 +784,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -760,6 +808,7 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
@@ -771,7 +820,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -799,7 +850,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -822,7 +875,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -845,7 +900,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -870,7 +927,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -896,7 +955,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -920,7 +981,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -943,7 +1006,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
