--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -12,6 +12,8 @@
 
 
 
+
+  
   
   
   
@@ -35,6 +37,8 @@
 
 
 
+
+  
   
   
   
@@ -58,6 +62,8 @@
 
 
 
+
+  
   
   
   
@@ -81,6 +87,8 @@
 
 
 
+
+  
   
   
   
@@ -104,6 +112,8 @@
 
 
 
+
+  
   
   
   
@@ -127,6 +137,8 @@
 
 
 
+
+  
   
   
   
@@ -150,6 +162,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -189,6 +204,7 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
@@ -201,7 +217,9 @@
 
 
 
+
 <br>
+
 
 
 
@@ -226,7 +244,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -250,8 +270,10 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 
@@ -273,21 +295,27 @@ papers:</i></p>
 
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
 
 
 
+
 <br>
+
 
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">
 &nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;Regulating Trade Margins and Consumer
 Welfare: Evidence from Cardiac Products in India&rdquo; with Debi
 Prasad Mohapatra<br>
 
+
 <br>
 
+
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">
-&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;Pharmaceutical Regulation and Incentives for Innovation in an International Perspective&rdquo;</span></span><span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold; font-style: italic;"></span><br>
+&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;<a href="worldcongress.pdf" target="_blank">Pharmaceutical Regulation and Incentives for Innovation from an International Perspective</a>&rdquo;</span></span><span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold; font-style: italic;"></span><br>
+
 
 
 
@@ -301,6 +329,7 @@ Prasad Mohapatra<br>
 
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -326,7 +355,9 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
+
 
 
 
@@ -353,6 +384,7 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 <p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
 
@@ -365,7 +397,9 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -394,7 +428,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -424,7 +460,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -450,8 +488,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -480,7 +520,9 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 
 
 
+
 <br>
+
 
 
 
@@ -511,7 +553,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -538,7 +582,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -565,8 +611,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -592,6 +640,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
@@ -604,7 +653,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -629,6 +680,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
@@ -641,7 +693,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -666,7 +720,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -697,7 +753,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -726,7 +784,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -755,7 +815,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -785,7 +847,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -809,6 +873,7 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
@@ -821,7 +886,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -851,7 +918,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -876,7 +945,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -901,7 +972,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -928,7 +1001,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -956,7 +1031,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -982,7 +1059,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -1007,7 +1086,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
