--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -13,6 +13,8 @@
 
 
 
+
+  
   
   
   
@@ -38,6 +40,8 @@
 
 
 
+
+  
   
   
   
@@ -63,6 +67,8 @@
 
 
 
+
+  
   
   
   
@@ -88,6 +94,8 @@
 
 
 
+
+  
   
   
   
@@ -113,6 +121,8 @@
 
 
 
+
+  
   
   
   
@@ -138,6 +148,8 @@
 
 
 
+
+  
   
   
   
@@ -163,6 +175,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -205,6 +220,7 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
@@ -218,7 +234,9 @@
 
 
 
+
 <br>
+
 
 
 
@@ -245,7 +263,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -271,8 +291,10 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 
@@ -296,12 +318,15 @@ papers:</i></p>
 
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
 
 
 
 
+
 <br>
+
 
 
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">
@@ -310,11 +335,14 @@ Welfare: Evidence from Cardiac Products in India&rdquo; with Debi
 Prasad Mohapatra<br>
 
 
+
 <br>
 
 
+
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">
-&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;<a href="worldcongress.pdf" target="_blank">Pharmaceutical Regulation and Incentives for Innovation from an International Perspective</a>&rdquo;</span></span><span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold; font-style: italic;"></span><br>
+&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;<a href="worldcongress.pdf" target="_blank">Pharmaceutical Regulation and Incentives for Innovation in an International Perspective</a>&rdquo;</span></span><span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold; font-style: italic;"></span><br>
+
 
 
 
@@ -329,6 +357,7 @@ Prasad Mohapatra<br>
 
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -356,7 +385,9 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
+
 
 
 
@@ -385,6 +416,7 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 <p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
 
@@ -398,7 +430,9 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -429,7 +463,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -461,7 +497,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -489,8 +527,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -521,7 +561,9 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 
 
 
+
 <br>
+
 
 
 
@@ -554,7 +596,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -583,7 +627,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -612,8 +658,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -641,6 +689,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
@@ -654,7 +703,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -681,6 +732,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
@@ -694,7 +746,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -721,7 +775,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -754,7 +810,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -785,7 +843,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -816,7 +876,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -848,7 +910,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -874,6 +938,7 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
@@ -887,7 +952,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -919,7 +986,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -946,7 +1015,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -973,7 +1044,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -1002,7 +1075,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -1032,7 +1107,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -1060,7 +1137,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -1087,7 +1166,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
