--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -16,6 +16,8 @@
 
 
 
+
+  
   
   
   
@@ -47,6 +49,8 @@
 
 
 
+
+  
   
   
   
@@ -78,6 +82,8 @@
 
 
 
+
+  
   
   
   
@@ -109,6 +115,8 @@
 
 
 
+
+  
   
   
   
@@ -140,6 +148,8 @@
 
 
 
+
+  
   
   
   
@@ -171,6 +181,8 @@
 
 
 
+
+  
   
   
   
@@ -202,6 +214,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -253,6 +268,7 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
@@ -269,7 +285,9 @@
 
 
 
+
 <br>
+
 
 
 
@@ -302,7 +320,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -334,8 +354,10 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 
@@ -365,6 +387,7 @@ papers:</i></p>
 
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
 
 
@@ -373,7 +396,9 @@ papers:</i></p>
 
 
 
+
 <br>
+
 
 
 
@@ -382,20 +407,8 @@ papers:</i></p>
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">
 &nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;Regulating Trade Margins and Consumer
 Welfare: Evidence from Cardiac Products in India&rdquo; with Debi
-Prasad Mohapatra<br>
+Prasad Mohapatra</span></span><span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold; font-style: italic;"></span><br>
 
-
-
-
-
-<br>
-
-
-
-
-
-</span></span><span style="font-family: Calibri;"><span lang="EN-US">
-&nbsp;&nbsp;&nbsp; &nbsp;</span></span><span style="font-family: Calibri;"><span lang="EN-US">&ldquo;<a href="worldcongress.pdf" target="_blank">Pharmaceutical Regulation and Incentives for Innovation in an International Perspective</a>&rdquo;</span></span><span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold; font-style: italic;"></span><br>
 
 
 
@@ -413,6 +426,7 @@ Prasad Mohapatra<br>
 
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -446,7 +460,9 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
+
 
 
 
@@ -481,6 +497,7 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 <p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
 
@@ -497,7 +514,9 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -534,7 +553,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -572,7 +593,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -606,8 +629,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -644,7 +669,9 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el, revised a
 
 
 
+
 <br>
+
 
 
 
@@ -683,7 +710,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -718,7 +747,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -753,8 +784,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -788,6 +821,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
@@ -804,7 +838,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -837,6 +873,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
@@ -853,7 +890,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -886,7 +925,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -925,7 +966,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -962,7 +1005,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -999,7 +1044,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -1037,7 +1084,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -1069,6 +1118,7 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
@@ -1085,7 +1135,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -1123,7 +1175,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -1156,7 +1210,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -1189,7 +1245,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -1224,7 +1282,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -1260,7 +1320,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -1294,7 +1356,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -1327,7 +1391,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
